# polymarket-arb-bot

./: .gitignore  CLAUDE.md  Cargo.toml  CProjectspolymarket-arb-bottasksprogress.txt  README.md  backtest_1h_results.json  backtest_cache.json  backtest_cache_5m.json  backtest_full_results.json  collect-trades.py  sweep_results.json  sweep_results_15m.json  sweep_results_5m.json  sweep_results_60m.json  temp_events.json
analysis/: collect-trades.py  fetch_historical_data.py  run_backtest.py
benchmarks/: backtest-2026-01-10-to-2026-01-12.txt
config/: 15min.toml  1hour.toml  5min.toml  arb.toml  bot.toml  collect.toml  strategy.toml
crates/poly-bot/: Cargo.toml
crates/poly-bot/examples/: csv_backtest.rs  set_allowances.rs
crates/poly-bot/src/: config.rs  data_source.rs  executor.rs  lib.rs  main.rs  state.rs  types.rs
crates/poly-bot/src/api/: fees.rs  markets.rs  mod.rs  rewards.rs
crates/poly-bot/src/dashboard/: api.rs  capture.rs  integration.rs  mod.rs  processor.rs  server.rs  session.rs  state.rs  types.rs
crates/poly-bot/src/data_source/: csv_replay.rs  live.rs  replay.rs  vec_replay.rs
crates/poly-bot/src/executor/: allowance.rs  autoclaim.rs  backtest.rs  chase.rs  fill.rs  interval.rs  live.rs  live_sdk.rs  noop.rs  paper.rs  position_manager.rs  shadow.rs  simulated.rs
crates/poly-bot/src/mode/: backtest.rs  common.rs  live.rs  mod.rs  paper.rs  shadow.rs
crates/poly-bot/src/observability/: anomaly.rs  capture.rs  counterfactual.rs  mod.rs  processor.rs  types.rs
crates/poly-bot/src/order_manager/: async_manager.rs  chasing.rs  mod.rs  simple.rs  tracker.rs  types.rs
crates/poly-bot/src/risk/: checks.rs  circuit_breaker.rs  leg_risk.rs  mod.rs  mode.rs  pnl.rs
crates/poly-bot/src/session/: manager.rs  mod.rs  orders.rs  pnl.rs  positions.rs  stats.rs
crates/poly-bot/src/strategy/: aggregator.rs  arb.rs  atr.rs  confidence.rs  confidence_sizing.rs  decision_log.rs  directional.rs  maker.rs  mod.rs  pivots.rs  position.rs  pricing.rs  regime.rs  signal.rs  sizing.rs  strike.rs  toxic.rs  trades_log.rs  trend.rs
crates/poly-bot/tests/: integration_backtest_validation.rs  integration_observability.rs  integration_replay.rs  integration_strategy.rs  test_confidence_sizing.rs  test_directional_strategy.rs  test_multi_engine.rs  test_pnl_risk.rs
crates/poly-collect/: Cargo.toml
crates/poly-collect/src/: binance.rs  clob.rs  config.rs  csv_writer.rs  data_writer.rs  discovery.rs  history.rs  lib.rs  main.rs  rtds.rs
crates/poly-common/: Cargo.toml
crates/poly-common/src/: clickhouse.rs  lib.rs  schema.sql  types.rs
crates/poly-import/: Cargo.toml
crates/poly-import/src/: lib.rs  main.rs  prices.rs  trades.rs
crates/poly-market/: Cargo.toml
crates/poly-market/src/: clob.rs  discovery.rs  lib.rs  orderbook.rs  types.rs
deploy/: Dockerfile.collect
deploy/k8s/: poly-collect.yaml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/dashboard/: AccountInfo.tsx  AnomalyAlerts.tsx  CircuitBreakerStatus.tsx  ControlPanel.tsx  EquityCurve.tsx  LogWindow.tsx  MarketsGrid.tsx  MetricsCards.tsx  SessionMetrics.tsx  index.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/market/: OrderBookDisplay.tsx  PositionPanel.tsx  PriceChart.tsx  TradesTable.tsx  index.ts
frontend/src/hooks/: index.ts  useDashboardState.ts  useWebSocket.ts
frontend/src/lib/: api.ts  store.ts  types.ts  websocket-manager.ts
frontend/src/pages/: Dashboard.tsx  MarketDetail.tsx  index.ts
prds/: CLAUDE.md
prds/scalp-strategy/: prd.json  prd.md  progress.txt
scripts/: README.md  backtest_1h.py  backtest_full.py  debug_market.py  debug_strike.py  derive_api_keys.py  dev.ps1  dev.sh  download_5m_data.py  downsample_orderbook.py  fast_backtest.py  import_and_downsample.sh  import_cache_to_clickhouse.py  param_sweep_pm.py  start.ps1  start.sh
spec/: POLYMARKET_BOT_SPEC_v3_RUST.md  POSITION_MANAGEMENT_SPEC.md  polymarket-arb-bot-spec-v2.2.md
tasks/: prd-react-dashboard.md  progress.txt  spec-polymarket-arb-bot.md  spec-v3-strategy.md  tasklist.json
