[workspace]
resolver = "2"
members = [
    "crates/poly-common",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/example/polymarket-arb-bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Financial math - NEVER use f64 for prices
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrency
dashmap = "6.1"

# Database
clickhouse = { version = "0.13", features = ["inserter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
