[workspace]
resolver = "2"
members = [
    "crates/poly-common",
    "crates/poly-market",
    "crates/poly-collect",
    "crates/poly-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/example/polymarket-arb-bot"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Financial math - NEVER use f64 for prices
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.36"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Concurrency
dashmap = "6.1"

# Database
clickhouse = { version = "0.13", features = ["inserter", "time", "uuid"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and config
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
dotenvy = "0.15"

# Async utilities
async-trait = "0.1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto for signing
ethers-core = "2.0"
sha3 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"

# Polymarket official client
polymarket-client-sdk = { version = "0.4", features = ["clob", "gamma", "ws", "ctf"] }

# Alloy for Ethereum types and signing (used by polymarket-client-sdk)
alloy = { version = "1.4", features = ["signers", "signer-local"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Synchronization
parking_lot = "0.12"

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
