[package]
name = "poly-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
poly-common = { path = "../poly-common" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Financial math - NEVER use f64 for prices
rust_decimal = { workspace = true }

# Time
chrono = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Database
clickhouse = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI and config
clap = { workspace = true }
toml = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

# HTTP client for API calls
reqwest = { workspace = true }

# Crypto for EIP-712 signing
ethers-core = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.36"
