[package]
name = "poly-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
poly-common = { path = "../poly-common" }
poly-market = { path = "../poly-market" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }

# Financial math - NEVER use f64 for prices
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Time
chrono = { workspace = true }
time = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Database
clickhouse = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# CLI and config
clap = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

# HTTP client for API calls
reqwest = { workspace = true }

# Crypto for EIP-712 signing and HMAC auth
ethers-core = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Polymarket official client
polymarket-client-sdk = { workspace = true }

# Alloy for Ethereum types and signing
alloy = { workspace = true }

# UUID for session/trade IDs
uuid = { workspace = true }

# Synchronization
parking_lot = { workspace = true }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# CSV for backtesting examples
csv = "1.3"

[dev-dependencies]
