[package]
name = "poly-collect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Real-time data collection for Polymarket arbitrage bot"

[[bin]]
name = "poly-collect"
path = "src/main.rs"

[dependencies]
# Internal
poly-common = { path = "../poly-common" }

# Async runtime
tokio = { workspace = true }

# HTTP client for Gamma API
reqwest = { version = "0.12", features = ["json"] }

# WebSocket for Binance and CLOB
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Financial math
rust_decimal = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Concurrent collections
dashmap = { workspace = true }

# Regex for parsing strike prices
regex = "1.11"

# CLI
clap = { workspace = true }

# Config
toml = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.36"
