[package]
name = "poly-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Financial math - NEVER use f64 for prices
rust_decimal = { workspace = true }
rust_decimal_macros = "1.36"

# Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
clickhouse = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.36"
