[package]
name = "poly-import"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "poly-import"
path = "src/main.rs"

[dependencies]
poly-common = { path = "../poly-common" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Financial math
rust_decimal = { workspace = true }

# Time
chrono = { workspace = true }

# Database
clickhouse = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
rust_decimal_macros = "1.36"
