[package]
name = "poly-market"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Polymarket integration: market discovery, CLOB WebSocket, orderbook state"

[dependencies]
poly-common = { path = "../poly-common" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Financial math - NEVER use f64 for prices
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async utilities
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }

# HTTP client for Gamma API
reqwest = { workspace = true }

# Regex for parsing strike prices
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
